--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "@langchain/core": "^0.3.73",
     "@langchain/langgraph": "^0.4.9",
     "@langchain/openai": "^0.6.11",
+    "@google/genai": "^1.16.0",
+    "@langchain/qdrant": "^0.1.3",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "js-tiktoken": "^1.0.21",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "pdf-parse": "^1.1.1",
+    "youtubei.js": "^15.0.1",
+    "zod": "3"
   }
 }
